whoami/03-ingress-traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app
  namespace: whoami
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Path(`/`)
      services:
        - name: whoami-traefik
          port: 80
